--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
   <title>Путешествия по России</title>
 </head>
 
-<body class="roof">
-    <div class="page">
+<body class="page">    
         <header class="header">
             <a href="#"><img class="header__logo" src="./images/header-logo.svg" alt="логотип"></a>
             <nav class="header__lang-links">
-                <a class="header__lang-link header__lang-link_ru" href="#">Ru</a>
+                <a class="header__lang-link header__lang-link_active" href="#">Ru</a>
                 <a class="header__lang-link header__lang-link_en" href="#">En</a>
             </nav>
         </header>
@@ -144,7 +143,6 @@
             </nav>
             <p class="footer__copyright">&copy; 2022. Кира Горинчой</p>
         </footer>
-    </div>
 </body>
 
 </html>
